name:                json-to-csv
version:             1.0.0.0
homepage:            https://github.com/robertjlooby/json-to-csv#readme
license:             GPL-3.0-only
license-file:        LICENSE
author:              Robert J Looby
maintainer:          example@example.com
copyright:           2019 Robert Looby
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     JsonToCsv
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , cassava
                     , scientific
                     , text
                     , unordered-containers
  default-language:    Haskell2010

executable json-to-csv
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , bytestring
                     , json-to-csv
  default-language:    Haskell2010

test-suite json-to-csv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       JsonToCsvSpec
  build-depends:       base
                     , json-to-csv
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robertjlooby/json-to-csv
